Updated parameters passing to salesforce logic. Add components to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,10 @@
   </div>
 </app-root>
 <c:CT_CTRL_ClaimLines />
+<c:CT_CTRL_Currencies />
+<c:CT_CTRL_Filters />
+<c:CT_CTRL_CustomerCases />
+<c:CT_CTRL_Community_Export_XLS />
 </body>
 
 </html>
